--- a/infrastructure/view/repository_view.xml
+++ b/infrastructure/view/repository_view.xml
@@ -39,6 +39,7 @@
                 <field name="pip_packages"/>
                 <field name="is_server"/>
                 <field name="default_in_new_env"/>
+                <field name="server_wide_modules"/>
                 <field name="install_server_command"
                     attrs="{'required':[('is_server','=',True)],'invisible':[('is_server','!=',True)]}"
                     />
