--- a/infrastructure/view/database_view.xml
+++ b/infrastructure/view/database_view.xml
@@ -97,7 +97,7 @@
                                 type="object"
                                 class="oe_link oe_read_only"/>
                         </div>
-                        <field name="main_hostname"/>
+                        <field name="main_hostname" widget="url"/>
                     </group>
                     <group>
                         <field name="demo_data"/>
@@ -109,14 +109,18 @@
                  </group>
                 <notebook>
                     <page string="Backups" states="active" name="backups">
-                        <label for="backups_enable"/>
-                        <div class="oe_inline">
-                            <field name="backups_enable"/><button class="oe_read_only oe_link" type="object" name="config_backups" attrs="{'invisible':['|',('state','!=','active'),('backups_enable','=',False)]}" string="Config Backups"/>
-                        </div>
-                        <label string=""/>
-                        <div attrs="{'invisible':[('backups_enable','=',False)]}">
-                            <field name="daily_backup" /><label for="daily_backup" string="Daily"/> - <field name="weekly_backup"/><label for="daily_backup" string="Weekcly"/> - <field name="monthly_backup"/><label for="monthly_backup" string="Monthly"/>
-                        </div>
+                        <group>
+                            <label for="backups_enable"/>
+                            <div class="oe_inline">
+                                <field name="backups_enable"/><button class="oe_read_only oe_link" type="object" name="config_backups" states='active' string="Config Backups"/>
+                                <!-- Lo mostramos tmb si esta desabilitado para desactivar backups -->
+                                <!-- <field name="backups_enable"/><button class="oe_read_only oe_link" type="object" name="config_backups" attrs="{'invisible':['|',('state','!=','active'),('backups_enable','=',False)]}" string="Config Backups"/> -->
+                            </div>
+                            <label string=""/>
+                            <div attrs="{'invisible':[('backups_enable','=',False)]}">
+                                <field name="daily_backup" /><label for="daily_backup" string="Daily"/> - <field name="weekly_backup"/><label for="daily_backup" string="Weekcly"/> - <field name="monthly_backup"/><label for="monthly_backup" string="Monthly"/>
+                            </div>
+                        </group>
                         <button type="object" name="update_backups_data" string="Update Backups Data" attrs="{'invisible':[('backups_enable','=',False)]}" />
                         <field name="backup_ids" attrs="{'invisible':[('backups_enable','=',False)]}" />
                     </page>
