--- a/infrastructure/view/server_view.xml
+++ b/infrastructure/view/server_view.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- infrastructure.server -->
 <openerp>
 <data>
 
@@ -81,8 +80,6 @@
                     <button icon="fa-sun-o " type="object" string="Activate" class="oe_stat_button" help="Test connection, check distribution, get processors data and activate" name="get_data_and_activate" states="draft"/>
                     <button name="reboot_server" icon="fa-refresh" string="Reboot Server" class="oe_stat_button" help="Reboot Server" confirm="Are you sure you want to reboot the server?" states="to_install,active"/>
                     <button name="restart_nginx" icon="fa-refresh" string="Restart Nginx" class="oe_stat_button" help="Restart Nginx" confirm="Are you sure you want to restart nxginx?" states="to_install,active"/>
-                    <!-- TODO remove this as we are no longer using postgres in server -->
-                    <!-- <button name="restart_postgres" icon="fa-refresh" string="Restart Postgres" class="oe_stat_button" help="Restart Nginx" confirm="Are you sure you want to restart postgres?" states="to_install,active"/> -->
                 </div>
                 <group>
                     <group>
@@ -91,13 +88,11 @@
                             <field
                                 name="ssh_port"
                                 class="oe_inline"/>
-                            <button name="test_connection"
+                            <button name="action_test_connection"
                                 string="⇒ Test Connection"
                                 type="object"
                                 class="oe_link oe_read_only"/>
                         </div>
-                        <!-- TODO ver a donde mandamos esta opcion y que hacemos con la misma -->
-                        <!-- <field name="requires_vpn"/> -->
                         <field name="user_name"/>
                         <label for="password"/>
                         <div>
@@ -122,7 +117,6 @@
                         <group>
                             <group>
                                 <field name="postfix_hostname"/>
-                                <!-- <field name="open_ports"/> -->
                                 <field name="http_port"/>
                                 <field name="https_port"/>
                                 <field name="smtp_port"/>
@@ -183,12 +177,7 @@
                        <field name="change_ids"/>
                     </page>
                     <page string="Data">
-                        <!-- <group col="1"> -->
-                           <!-- <field name="software_data"/> -->
-                           <!-- <field name="hardware_data"/> -->
-                           <!-- <field name="contract_data"/> -->
-                           <field name="note"/>
-                       <!-- </group> -->
+                       <field name="note"/>
                    </page>
                </notebook>
             </sheet>
