--- a/infrastructure/view/environment_view.xml
+++ b/infrastructure/view/environment_view.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- infrastructure.environment -->
 <openerp>
 <data>
 
@@ -58,9 +57,7 @@
                     </h2>
                     <h1>
                         <field name="partner_id" default_focus="1" placeholder="Partner..."/>
-                        <field name="odoo_version_id" placeholder="Environment Version..."/>
-                        <!-- <field name="name" default_focus="1" placeholder="Name...(ej. 'ingadhoc-80'"/> -->
-                        <!-- <field name="description" placeholder="Description..."/> -->
+                        <field name="odoo_version_id" placeholder="Odoo Version..."/>
                     </h1>
                 </div>
                 <div class="oe_right oe_button_box" name="buttons">
@@ -78,8 +75,6 @@
                 </div>
                 <group>
                     <group>
-<!--                         <field name="partner_id"/>
-                        <field name="odoo_version_id"/> -->
                         <field name="name"/>
                         <field name="description"/>
                     </group>
@@ -89,13 +84,13 @@
                     </group>
                 </group>
                 <notebook>
-                    <page string="Repositories">
+                    <page string="Repositories" states="active">
                         <button string="Pull, Clone to Env. and Checkout all Repositoires"
                             icon="gtk-go-down"
                             type="object"
                             states="active"
                             name="repositories_pull_clone_and_checkout"/>
-                        <field name="environment_repository_ids" context="{'default_server_id': server_id}" states="active"/>
+                        <field name="environment_repository_ids" context="{'default_server_id': server_id}"/>
                     </page>
                     <page string="Advanced Conf.">
                         <group>
