--- a/infrastructure/view/server_view.xml
+++ b/infrastructure/view/server_view.xml
@@ -134,6 +134,7 @@
                                 <field name="ip_address"/>
                                 <field name="base_path"/>
                                 <field name="sources_path"/>
+                                <field name="backups_path"/>
                                 <field name="mailgate_file"/>
                                 <field name="nginx_sites_path"/>
                                 <field name="nginx_log_path"/>
