--- a/infrastructure/view/database_type_view.xml
+++ b/infrastructure/view/database_type_view.xml
@@ -33,6 +33,9 @@
                 <field name="auto_deactivation_days"/>
                 <field name="auto_drop_days"/>
                 <field name="install_lang_id"/>
+                <field name="sources_from_id"/>
+                <field name="workers"/>
+                <field name="workers_number" attrs="{'invisible':[('workers','=','clasic_rule')],'required':[('workers','!=','clasic_rule')]}"/>
                 <label for="instance_admin_pass"/>
                 <div>
                     <field
