--- a/infrastructure/view/environment_view.xml
+++ b/infrastructure/view/environment_view.xml
@@ -84,14 +84,14 @@
                     </group>
                 </group>
                 <notebook>
-                    <page string="Repositories" states="active">
+<!--                     <page string="Repositories" states="active">
                         <button string="Pull, Clone to Env. and Checkout all Repositoires"
                             icon="gtk-go-down"
                             type="object"
                             states="active"
                             name="repositories_pull_clone_and_checkout"/>
                         <field name="environment_repository_ids" context="{'default_server_id': server_id}"/>
-                    </page>
+                    </page> -->
                     <page string="Advanced Conf.">
                         <group>
                             <field name="install_server_command" attrs="{'invisible':[('type','=','docker')],'required':[('type','!=','docker')]}"/>
