--- a/infrastructure/view/server_view.xml
+++ b/infrastructure/view/server_view.xml
@@ -164,14 +164,14 @@
                         <button type="object" class="oe_highlight" name="install_postfix" string="Install Posftix"/>
                         <field name="install_command_ids" context="{'server_id':id}"/>
                     </page>
-                    <page string="Repositories" states="active">
+<!--                     <page string="Repositories" states="active">
                         <button string="Get and Update all Repositoires"
                             icon="gtk-go-down"
                             type="object"
                             states="active"
                             name="get_update_repositories"/>
                        <field name="server_repository_ids"/>
-                    </page>
+                    </page> -->
                     <page string="Docker Images" states="active">
                        <field name="server_docker_image_ids"/>
                     </page>
