--- a/infrastructure/view/instance_view.xml
+++ b/infrastructure/view/instance_view.xml
@@ -146,8 +146,7 @@
                             states="active"
                             name="repositories_pull_clone_and_checkout"/>
                         <field name="sources_from_id" attrs="{'invisible': [('sources_from_id','=',False)]}"/>
-                        <field name="sources_instance_repository_ids" attrs="{'invisible': [('sources_from_id','=',False)]}"/>
-                        <field name="instance_repository_ids" attrs="{'invisible': [('sources_from_id','!=',False)]}" context="{'default_server_id': server_id}"/>
+                        <field name="instance_repository_ids" context="{'default_server_id': server_id}"/>
                     </page>
                     <page string="Advanced Conf">
                         <group>
